# parallelized-histogram-matching

./: .gitignore  CMakeLists.txt  course_project_specification.md  final_report.md  histogram_matcher.cpp  histogram_matcher.h  hybrid_main.cpp  main.cpp  sequential_main.cpp  sequential_matcher.cpp  sequential_matcher.h  specification.md  thread_safe_queue.h
